--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -27,7 +27,7 @@
   </div>
   <div class = "cbox" id = "cbox">
     <div class="container">
-      <p class="bottext">Bot: Hello. I am mental bot. Try to chat with me!</p>
+      <p class="bottext">Bot: Hello. I am mentalbot. How can I help?</p>
       <span class="time-left"></span>
     </div>
   </div>
