--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -22,7 +22,7 @@
     
     <!-- Modal content -->
     <div class="modal-content"> <span class="close">&times;</span>
-      <p>This beta version chatbot is trained with 10,000 pairs of social media comments as well as college admission data.Feel free to play around with it</p>
+      <p>This beta version bot is trained with common responses to mental health issues. Data set is continuously updating! </p>
     </div>
   </div>
   <div class = "cbox" id = "cbox">
